--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HELLO</h1>
+    <blockquote>
+    <h1>Prabin Website</h1>
+    <a href="index.html">Home</a>
+    <a href="about.html">About Us</a>
+    <a href="contact.html>">Contact Us</a>
+    <a href="mailto:iprabinkhadka58@gmail.com">prabinkhadka58@gmail.com</a>
+    <a href="tel:9823114631">9823114631</a>
+    <h1>My Gallery</h1>
+    <hr>
+    <img src="./gallery/image/abc.jpg" alt="">
+</blockquote>
 </body>
 </html>
